<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PIMS</string>
    <string name="action_settings">Settings</string>
    <string name="login">Log In</string>
    <string name="uName" >User Name</string>
    <string name="pWord" >Password</string>
    <string name="sign_in">Sign In</string>
    <string name="new_sign">New User ?</string>
    <string name="register">Register</string>
    <string name="increase">Increase</string>
    <string name="decrease">Decrease</string>
    <string name="capacity">Capacity</string>
    <string name="available">Available</string>
    <string name="reserved">Reserved</string>
    <string name="is_open">Is Open</string>
    <string name="close_lot">Close Lot</string>

</resources>